@@ -1,5 +1,6 @@
 Changes in 0.5.2-CVS
 ==============================================================================
+- 1834438 wbemsmt-adminwebapp: hostnames are not saved
 - 1819901 wbemsmt-webapp: show namespace in slp result
 - 1819855 wbemsmt-webapp: no parallel admin sessions
 - 1819758 wbemsmt-webapp: wrong xml :overwrite local conf with slp
